--- a/src/main/resources/templates/initialRoles/propertyManage.html
+++ b/src/main/resources/templates/initialRoles/propertyManage.html
@@ -51,6 +51,39 @@
             }
         });
     }
+
+    function save(){
+        $.ajax({
+            url:'addproperty',
+            type:'get',
+            dataType:'json',
+            success:function (data) {
+                if (data>0) {
+                    $.messager.alert("系统提示",'新增属性成功');
+                }else{
+                    $.messager.alert("系统提示",'新增属性失败');
+                }
+            },
+            error:function (data) {
+                $.messager.alert("系统提示",'新增属性错误');
+            }
+        })
+    }
+
+    $(function () {
+        //点击表格在右边弹出编码和名称
+        $('#dg').datagrid({
+            onSelect:function (rowIndex,rowData) {
+                $.ajax({
+                    url:'attbyname?name='+rowData.aName,
+                    type:'get',
+                    success:function (data) {
+                        $("#code").datagrid('loadData',data);
+                    }
+                });
+            }
+        });
+    });
 </script>
 <body>
 
@@ -64,27 +97,25 @@
                 <a href="#" class="easyui-linkbutton" iconCls="icon-reload" plain="true" onclick="">刷新</a>
             </div>
         </div>
+
         <div style="width: 100%;height:30px;background: rgba(0, 0, 255, 0.1)">
-            <table id="dg" class="easyui-datagrid" title="" style="width:300%;height: 670px;" toolbar="#d">
+            <table id="dg" class="easyui-datagrid"  style="width:272px;height: 767px;" toolbar="#d"
+                    data-options="url:'attlist',singleSelect:true">
                 <thead>
                 <tr>
-                    <th data-options="field:'itemid',width:90">属性名称</th>
-                    <th data-options="field:'productid',width:90">属性类型</th>
-                    <th data-options="field:'listprice',width:90,align:'right'">是否权限</th>
+                    <th data-options="field:'aName',width:90">属性名称</th>
+                    <th data-options="field:'aType',width:90">属性类型</th>
+                    <th data-options="field:'aJurisdiction',width:90">是否权限</th>
                 </tr>
                 </thead>
-                <tbody>
-                <tr>
-                    <td>Data 1</td>
-                    <td>Data 2</td>
-                    <td>Data 3</td>
-                </tr>
-                </tbody>
             </table>
         </div>
+
+
+
         <div id="win" class="easyui-dialog" style="width:400px;padding: 20px;"
              iconCls="icon-add" data-options="title:'增加',modal:true,closed:true">
-            <form id="" method="post" novalidate>
+            <form id="add" method="post" novalidate>
                 <div style="margin-bottom:10px">
                     <input class="easyui-textbox" label="属性名称:" required="true" style="width:100%"></input>
                 </div>
@@ -92,7 +123,7 @@
                     <input class="easyui-combo" label="属性类型:" required="true" style="width:100%"></input>
                 </div>
                 <div style="text-align:right">
-                    <input class="easyui-linkbutton" type="submit" value="保存" style="width:80px;height:30px">
+                    <input class="easyui-linkbutton" type="submit" value="保存" onclick="save()" style="width:80px;height:30px">
                     <input class="easyui-linkbutton" type="reset" value="取消" style="width:80px;height:30px">
                 </div>
 
@@ -118,7 +149,7 @@
             </form>
         </div>
     </div>
-    <div data-options="region:'center'" style="padding:5px;">
+    <div data-options="region:'center'" style="padding:0px;">
         <div style="width: 100%;">
             <div id="ad" style="background: rgba(0, 0, 255, 0.1)">
                 <a href="#" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="javascript:addDialog3()">增加</a>
@@ -128,12 +159,12 @@
             </div>
         </div>
         <div style="width: 100%;">
-            <table class="easyui-datagrid" pagination="true" rownumbers="true" style="width:95%;height:720px;" toolbar="#ad">
+            <table id="code" class="easyui-datagrid" pagination="true" style="width:1411px;height:797px;" toolbar="#ad"
+               >
                 <thead>
                 <tr>
-                    <th field="ck" checkbox="true"></th>
-                    <th field="itemid" width="350">代码</th>
-                    <th field="productid" width="350">名称</th>
+                    <th field="aCode" width="50%">代码</th>
+                    <th field="modelName" width="50%">名称</th>
                 </tr>
                 </thead>
             </table>
